<resources>
    <string name="app_name">inventory</string>
    <string name="tagline">Apki Dukaan ka Asaan Hisaab</string>
    <string name="new_sale">Nayi Sale</string>
    <string name="add_item">Naya Sama’an</string>
    <string name="stock">Maujooda Sama’an</string>
    <string name="reports">Rozana Hisaab</string>
    <string name="activation_title">App Activation</string>
    <string name="enter_key">Enter Activation Key</string>
    <string name="verify_continue">Verify and Continue</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_sale">Sale</string>
    <string name="nav_stock">Stock</string>
    <string name="nav_reports">Reports</string>
    <string name="nav_profile">Profile</string>
</resources>